fixed alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
 
 
 .btn-action {
-  background-color: #48E499 
+  background-color: #48E499 ;
 }
 
 .btn-action:hover { 
