--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -11,6 +11,16 @@
 
 #or-buttons {
   margin-top:1em;
+  margin-left:1em;
+  margin-right:1em;
   font-size: 1.5em;
   font-family: 'Pacifico';
+}
+
+.tagline {
+  text-align: center;
+}
+
+#main-page-actions {
+  margin-left:18em;
 }
